# gpt-streamlit-chat

./: .gitignore  EAGPT.py  EAGPT_blended.py  EAGPT_facts.py  EAGPT_lib.py  EAGPT_terminal.py  EAGPT_wordy.py  README.md  api_firebase.py  api_openai.py  app.py  commit_test.txt  create_db.py  eagpt_lib.py  index.html  json-to-toml.py  main.py  pets.db  populate_db.py  profile.txt  profile_blended.py  profile_blended.txt  profile_facts.py  profile_facts.txt  profile_wordy.txt  profiles.db  pyproject.toml  pyqt-app.py  requirements.txt  script.js  techstack.md  techstack.yml  test.py  test.txt  test_area.py
pages/: 1_Profile Manager.py  2_Prompt Manager.py  3_Knowledge Base.py  3_page_3.py  8_Dev Notes.py  streamlit-app.py
profiles/: blended.txt  blended_description.txt  default_description.txt  facts.txt  facts_description.txt  wordy.txt  wordy_description.txt
