[tool.poetry]
name = "eagpt"
version = "0.1.0"
description = "A chatbot project"
authors = ["Colin Matthews"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
streamlit = "^1.26.0"
tiktoken = "^0.4.0"
google-cloud-firestore = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
